# server/http.go
@@ -175,9 +175,12 @@ func (s *HTTPd) RegisterSiteHandlers(site site.API) {
 	}
 
 	routes := map[string]route{
+		"batterysolarsupport":     {"POST", "/batterysolarsupport/{value:[01truefalse]+}", boolHandler(site.SetBatterySolarSupport, site.GetBatterySolarSupport)},
+		"batteryreservesoc":       {"POST", "/batteryreservesoc/{value:[0-9.]+}", floatHandler(site.SetBatteryReserveSoc, site.GetBatteryReserveSoc)},
 		"buffersoc":               {"POST", "/buffersoc/{value:[0-9.]+}", floatHandler(site.SetBufferSoc, site.GetBufferSoc)},
 		"bufferstartsoc":          {"POST", "/bufferstartsoc/{value:[0-9.]+}", floatHandler(site.SetBufferStartSoc, site.GetBufferStartSoc)},
 		"batterydischargecontrol": {"POST", "/batterydischargecontrol/{value:[01truefalse]+}", boolHandler(site.SetBatteryDischargeControl, site.GetBatteryDischargeControl)},
+		"batterydischargemode":    {"POST", "/batterydischargemode/{value:[a-z]+}", batteryDischargeModeHandler(site)},
 		"batterygriddischarge":    {"POST", "/batterygriddischarge/{value:[01truefalse]+}", boolHandler(site.SetBatteryGridDischarge, site.GetBatteryGridDischarge)},
 		"batterygridcharge":       {"POST", "/batterygridchargelimit/{value:-?[0-9.]+}", floatPtrHandler(site.SetBatteryGridChargeLimit, site.GetBatteryGridChargeLimit)},
 		"batterygridchargedelete": {"DELETE", "/batterygridchargelimit", floatPtrHandler(site.SetBatteryGridChargeLimit, site.GetBatteryGridChargeLimit)},
